--- a/EODHistoricalData.Wrapper/EODHistoricalData.Wrapper.csproj
+++ b/EODHistoricalData.Wrapper/EODHistoricalData.Wrapper.csproj
@@ -27,6 +27,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+		<PackageReference Include="System.Collections" Version="4.3.0" />
 	</ItemGroup>
 
 </Project>
