--- a/EODHistoricalData.Wrapper/EODHistoricalData.Wrapper.csproj
+++ b/EODHistoricalData.Wrapper/EODHistoricalData.Wrapper.csproj
@@ -3,7 +3,7 @@
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
-		<VersionPrefix>1.2.8</VersionPrefix>
+		<VersionPrefix>1.2.9</VersionPrefix>
 		<Company>EODHistoricalData</Company>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<Description>This library is the C# .NET SDK for the EOD Historical data REST API. It's intended to be used for data extraction for financial valuations, macroeconomic analyses, sentiment analysis, option strategies, technical analysis, development of machine learning models, and more!</Description>
@@ -12,6 +12,7 @@
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<RepositoryUrl>https://github.com/EodHistoricalData/EODHistoricalData.Wrapper</RepositoryUrl>
 		<PackageTags>EOD;EODHistoricalData</PackageTags>
+		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 	</PropertyGroup>
 
 	<ItemGroup>
